# jules

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: semantic-release.yaml
api/: Dockerfile  README.md  prepare_pyproject.py  pyproject.template.toml  pyproject.toml
api/jules_api/: config_loader.py
api/src/app/: main.py
api/src/app/api/v1/endpoints/: auth.py  cables.py  models.py  rao.py
api/src/app/core/: config.py  deps.py  security.py
api/src/app/db/: session.py
api/src/app/db/models/: __init__.py  user.py
api/src/app/models/: cables.py  models.py  operability.py  rao.py  user.py  vessels.py
api/src/app/schemas/: user.py
api/src/jules_api/app/api/v1/: router.py
api/src/jules_api/app/api/v1/endpoints/: operability.py  vessels.py
backend/: Dockerfile  config_loader.py  pyproject.toml
backend/dev/: Dockerfile
backend/jules_backend/: __init__.py  operability.py
backend/jules_core/: __init__.py  config_loader.py  logging.py  model.py  operability.py  rao.py
backend/src/jules_backend/: config_loader.py  operability.py  rao.py
config/: dev.yaml  prod.yaml  rao.yaml  stage.yaml
frontend/: Dockerfile  config-loader.js  package.json
