[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jules_api"
version = "0.1.0"
description = "API implementation for Nautilus Jules"
authors = [
    { name = "Damir Herman", email = "damir@nautilus-ai.org" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "alembic",
    "psycopg2-binary",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "loguru",
    # Use JULES_CORE_PATH env var if set, otherwise default to Docker build path
    # For local dev: export JULES_CORE_PATH=../backend
    # For Docker build: export JULES_CORE_PATH=/app/backend (or leave unset for default)
    "jules_core @ file://${JULES_CORE_PATH:-/app/backend}"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx"
]
